# mothertoken

./: .coverage  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: benchmark.yml  python-publish.yml  python-tests.yml  web-deploy.yml  web-tests.yml
data/: benchmark.json  models.yaml
docs/: benchmarking.md
scripts/: sync_tiktoken_tokenizers.py
src/mothertoken/benchmark/: runner.py
src/mothertoken/cli/: app.py  benchmark_loader.py
src/mothertoken/core/: pricing.py  registry.py  resources.py  tokenizer_registry_service.py  tokenizers.py  transformers_service.py
src/mothertoken/data/: __init__.py  benchmark.json  tokenizers.yaml
tests/: smoke_installed_cli.py  test_benchmark_runner.py  test_cli.py  test_sync_tiktoken_tokenizers.py  test_tokenizer_registry_service.py  test_tokenizers.py
web/: .impeccable.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
web/.astro/: settings.json
web/src/: constants.ts
web/src/components/: AlphaBanner.astro  CliTerminal.astro  Footer.astro  Nav.astro
web/src/data/: benchmark.ts
web/src/layouts/: Base.astro
web/src/pages/: benchmark.astro  cli.astro  index.astro  methodology.astro
web/src/styles/: global.css
