[project]
name = "mothertoken"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
    "tiktoken>=0.7.0",
    "transformers>=4.40.0",
    "pyyaml>=6.0.1",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "ruff>=0.9.9",
]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
