[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project]
name = "mothertoken"
version = "0.1.0.0a1"
description = "Benchmarking tool for tokenizer efficiency across languages and models"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Inigo" },
]
keywords = ["tokenizer", "llm", "multilingual", "benchmark", "fairness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
    "tiktoken>=0.7.0",
    "transformers>=4.40.0",
    "pyyaml>=6.0.1",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
mothertoken = "mothertoken.cli.app:app"
mothertoken-benchmark = "mothertoken.benchmark.runner:main"

[project.urls]
Homepage = "https://github.com/inimaz/mothertoken"
Repository = "https://github.com/inimaz/mothertoken"
Issues = "https://github.com/inimaz/mothertoken/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mothertoken"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "ruff>=0.9.9",
    "autoflake>=2.3.1",
]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
